fixes squashing to the top problem

--- a/styles/utilities.css
+++ b/styles/utilities.css
@@ -24,7 +24,6 @@
 .flex > *:not(:first-child) {
   flex: 1;
   width: 100%;
-  margin-top: 5px;
 }
 
 @media (min-width: 700px) {
@@ -45,7 +44,7 @@
   justify-content: flex-start;
   width: min(1200px, 90%);
   margin: 0 auto;
-  padding: 1ch;
+  padding: 2rem 2ch;
   min-height: 100vh;
 }
 
